--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "classnames": "^2.2.6",
-    "framer-motion": "^2.9.5",
-    "node-sass": "^4.14.1",
+    "axios": "^0.24.0",
+    "framer-motion": "^5.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.3",
     "react-spring": "^8.0.27",
     "react-transition-group": "^4.3.0",
-    "react-use-measure": "^2.0.4"
+    "react-use-measure": "^2.0.4",
+    "sass": "^1.44.0"
   },
   "scripts": {
     "start": "react-scripts start",
