--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.27.2",
-    "framer-motion": "^6.5.1",
+    "@react-spring/parallax": "^9.5.4",
+    "@react-spring/web": "^9.5.4",
     "next": "^12.2.3",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.5.2",
     "styled-components": "^5.3.5"
   },
   "scripts": {
