--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@react-spring/parallax": "^9.5.4",
     "@react-spring/web": "^9.5.4",
-    "next": "^12.2.3",
+    "classnames": "^2.3.2",
+    "next": "^13.1.4",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -13,6 +14,7 @@
   },
   "scripts": {
     "dev": "next dev",
+    "ts": "tsc --noemit --pretty --watch",
     "start": "next start",
     "build": "next build"
   },
@@ -30,6 +32,14 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.13.1",
-    "eslint": "^8.20.0"
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.20.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   }
 }
