--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,7 @@
 # misc
 .DS_Store
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
 
 npm-debug.log*
 yarn-debug.log*
@@ -29,4 +26,8 @@ yarn-error.log*
 
 /.next/
 /out/
+
+
+*.tsbuildinfo
+next-env.d.ts
 
