--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "semantic-ui-css": "^2.5.0",
     "styled-components": "^5.3.5"
   },
   "scripts": {
