--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-spring/parallax": "^9.7.2",
-    "@react-spring/web": "^9.7.2",
-    "classnames": "^2.3.2",
-    "next": "^13.4.6",
-    "prop-types": "^15.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@react-spring/parallax": "^9.7.5",
+    "@react-spring/web": "^9.7.5",
+    "classnames": "^2.5.1",
+    "next": "^14.2.23",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "semantic-ui-css": "^2.5.0"
   },
   "scripts": {
@@ -31,14 +31,15 @@
     ]
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.13.1",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.20.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "@netlify/plugin-nextjs": "^4.41.3",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/node": "^18.19.74",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.19.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.7.3"
   }
 }
